--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -202,7 +202,7 @@ table {
     max-width: 100% !important;
   }
   @page {
-    margin: 0.5cm;
+    margin: 2cm .5cm;
   }
   p,
   h2,
@@ -214,7 +214,7 @@ table {
   h3 {
     page-break-after: avoid;
   }
-  .navbar-toggle {
+  .navbar {
     display: none;
   }
 }
@@ -228,16 +228,10 @@ html {
   -webkit-overflow-scrolling: touch;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
-@media screen and (max-device-width: 480px) {
-  html {
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-  }
-}
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 1.428;
   color: #333333;
   background-color: #fff;
 }
@@ -346,7 +340,7 @@ h6,
 .h6 {
   font-family: inherit;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 1.1;
 }
 h1 small,
 h2 small,
@@ -369,10 +363,6 @@ h2,
 h3 {
   margin-top: 20px;
   margin-bottom: 10px;
-  line-height: 40px;
-}
-h3 {
-  line-height: 30px;
 }
 h4,
 h5,
@@ -382,19 +372,19 @@ h6 {
 }
 h1,
 .h1 {
-  font-size: 38.5px;
+  font-size: 38px;
 }
 h2,
 .h2 {
-  font-size: 31.5px;
+  font-size: 32px;
 }
 h3,
 .h3 {
-  font-size: 24.5px;
+  font-size: 24px;
 }
 h4,
 .h4 {
-  font-size: 17.5px;
+  font-size: 18px;
 }
 h5,
 .h5 {
@@ -402,20 +392,18 @@ h5,
 }
 h6,
 .h6 {
-  font-size: 11.9px;
+  font-size: 12px;
 }
 h1 small,
 .h1 small {
-  font-size: 24.5px;
+  font-size: 24px;
 }
 h2 small,
 .h2 small {
-  font-size: 17.5px;
+  font-size: 18px;
 }
 h3 small,
-.h3 small {
-  font-size: 14px;
-}
+.h3 small,
 h4 small,
 .h4 small {
   font-size: 14px;
@@ -437,7 +425,7 @@ ol ul {
   margin-bottom: 0;
 }
 li {
-  line-height: 20px;
+  line-height: 1.428;
 }
 .list-unstyled {
   margin-left: 0;
@@ -457,7 +445,7 @@ dl {
 }
 dt,
 dd {
-  line-height: 20px;
+  line-height: 1.428;
 }
 dt {
   font-weight: bold;
@@ -524,7 +512,7 @@ blockquote p:last-child {
 }
 blockquote small {
   display: block;
-  line-height: 20px;
+  line-height: 1.428;
   color: #999999;
 }
 blockquote small:before {
@@ -557,7 +545,7 @@ address {
   display: block;
   margin-bottom: 20px;
   font-style: normal;
-  line-height: 20px;
+  line-height: 1.428;
 }
 code,
 pre {
@@ -579,7 +567,7 @@ pre {
   padding: 9.5px;
   margin: 0 0 10px;
   font-size: 13px;
-  line-height: 20px;
+  line-height: 1.428;
   word-break: break-all;
   word-wrap: break-word;
   white-space: pre;
@@ -869,7 +857,7 @@ th {
 .table thead > tr > td,
 .table tbody > tr > td {
   padding: 8px;
-  line-height: 20px;
+  line-height: 1.428;
   vertical-align: top;
   border-top: 1px solid #ddd;
 }
@@ -1028,7 +1016,7 @@ legend {
   padding: 0;
   margin-bottom: 20px;
   font-size: 21px;
-  line-height: 40px;
+  line-height: 1.1;
   color: #333333;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
@@ -1057,9 +1045,8 @@ input[type="color"] {
   display: block;
   min-height: 34px;
   padding: 6px 9px;
-  margin-bottom: 10px;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 1.428;
   color: #555555;
   vertical-align: middle;
   background-color: #fff;
@@ -1158,6 +1145,7 @@ textarea::-webkit-input-placeholder {
 .checkbox {
   display: block;
   min-height: 20px;
+  margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 20px;
   vertical-align: middle;
@@ -1211,7 +1199,7 @@ input[type="search"].input-large,
 input[type="tel"].input-large,
 input[type="color"].input-large {
   padding: 11px 14px;
-  font-size: 17.5px;
+  font-size: 18px;
   border-radius: 6px;
 }
 select.input-small,
@@ -1232,24 +1220,8 @@ input[type="tel"].input-small,
 input[type="color"].input-small {
   min-height: 26px;
   padding: 2px 10px;
-  font-size: 11.9px;
+  font-size: 12px;
   border-radius: 3px;
-}
-input[class*="span"],
-select[class*="span"],
-textarea[class*="span"] {
-  float: none;
-  margin-left: 0;
-  margin-right: 0;
-}
-.input-append input[class*="span"],
-.input-prepend input[class*="span"] {
-  display: inline-block;
-}
-input[class*="span"],
-select[class*="span"],
-textarea[class*="span"] {
-  height: 34px;
 }
 input[disabled],
 input[readonly],
@@ -1327,7 +1299,7 @@ select:focus:invalid:focus {
   box-shadow: 0 0 6px #f8b9b7;
 }
 .form-actions {
-  padding: 19px 20px 20px;
+  padding: 20px 20px;
   margin-top: 20px;
   margin-bottom: 20px;
   background-color: #f5f5f5;
@@ -1349,18 +1321,11 @@ select:focus:invalid:focus {
 .form-actions:after {
   clear: both;
 }
-.help-block,
-.help-inline {
-  color: #737373;
-}
 .help-block {
   display: block;
+  margin-top: 5px;
   margin-bottom: 10px;
-}
-.help-inline {
-  display: inline-block;
-  vertical-align: middle;
-  padding-left: 5px;
+  color: #737373;
 }
 .input-group {
   display: table;
@@ -1379,16 +1344,10 @@ select:focus:invalid:focus {
 .input-group-btn,
 .input-group input {
   display: table-cell;
-  border-radius: 0;
 }
-.input-group-addon.input-small,
-.input-group-btn.input-small,
-.input-group input.input-small {
-  border-radius: 0;
-}
-.input-group-addon.input-large,
-.input-group-btn.input-large,
-.input-group input.input-large {
+.input-group-addon:not(:first-child):not(:last-child),
+.input-group-btn:not(:first-child):not(:last-child),
+.input-group input:not(:first-child):not(:last-child) {
   border-radius: 0;
 }
 .input-group-addon,
@@ -1403,52 +1362,39 @@ select:focus:invalid:focus {
   padding: 6px 8px;
   font-size: 14px;
   font-weight: normal;
-  line-height: 20px;
+  line-height: 1.428;
   text-align: center;
   text-shadow: 0 1px 0 #fff;
   background-color: #eeeeee;
   border: 1px solid #ccc;
+  border-radius: 4px;
 }
 .input-group-addon.input-small {
   padding: 2px 10px;
-  font-size: 11.9px;
+  font-size: 12px;
+  border-radius: 3px;
 }
 .input-group-addon.input-large {
   padding: 11px 14px;
-  font-size: 17.5px;
+  font-size: 18px;
+  border-radius: 6px;
 }
 .input-group input:first-child,
-.input-group-addon:first-child {
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
-}
-.input-group input:first-child.input-small,
-.input-group-addon:first-child.input-small {
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
-}
-.input-group input:first-child.input-large,
-.input-group-addon:first-child.input-large {
-  border-bottom-left-radius: 6px;
-  border-top-left-radius: 6px;
+.input-group-addon:first-child,
+.input-group-btn:first-child > .btn:first-child,
+.input-group-btn:first-child > .dropdown-toggle:first-child {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
 }
 .input-group-addon:first-child {
   border-right: 0;
 }
 .input-group input:last-child,
-.input-group-addon:last-child {
-  border-bottom-right-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.input-group input:last-child.input-small,
-.input-group-addon:last-child.input-small {
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
-}
-.input-group input:last-child.input-large,
-.input-group-addon:last-child.input-large {
-  border-bottom-right-radius: 6px;
-  border-top-right-radius: 6px;
+.input-group-addon:last-child,
+.input-group-btn:last-child > .btn:last-child,
+.input-group-btn:last-child > .dropdown-toggle {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
 .input-group-addon:last-child {
   border-left: 0;
@@ -1460,7 +1406,6 @@ select:focus:invalid:focus {
 .input-group-btn > .btn {
   position: relative;
   float: left;
-  border-radius: 0;
 }
 .input-group-btn > .btn + .btn {
   margin-left: -1px;
@@ -1469,82 +1414,24 @@ select:focus:invalid:focus {
 .input-group-btn > .btn:active {
   z-index: 2;
 }
-.input-group-btn:first-child > .btn:first-child,
-.input-group-btn:first-child > .dropdown-toggle:first-child {
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
-}
-.input-group-btn:first-child > .btn:first-child.btn-large,
-.input-group-btn:first-child > .dropdown-toggle:first-child.btn-large {
-  border-bottom-left-radius: 6px;
-  border-top-left-radius: 6px;
-}
-.input-group-btn:first-child > .btn:first-child.btn-small,
-.input-group-btn:first-child > .dropdown-toggle:first-child.btn-small {
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
-}
-.input-group-btn:last-child > .btn:last-child,
-.input-group-btn:last-child > .dropdown-toggle {
-  border-bottom-right-radius: 4px;
-  border-top-right-radius: 4px;
-}
-.input-group-btn:last-child > .btn:last-child.btn-large,
-.input-group-btn:last-child > .dropdown-toggle.btn-large {
-  border-bottom-right-radius: 6px;
-  border-top-right-radius: 6px;
-}
-.input-group-btn:last-child > .btn:last-child.btn-small,
-.input-group-btn:last-child > .dropdown-toggle.btn-small {
-  border-bottom-right-radius: 3px;
-  border-top-right-radius: 3px;
-}
 .form-inline input,
 .form-inline select,
 .form-inline textarea,
 .form-inline .radio,
 .form-inline .checkbox {
   display: inline-block;
+}
+.form-inline .radio,
+.form-inline .checkbox {
+  margin-top: 0;
   margin-bottom: 0;
 }
-@media screen and (min-width: 768px) {
-  .form-horizontal .control-group {
-    position: relative;
-    margin-bottom: 20px;
-  }
-  .form-horizontal .control-group:before,
-  .form-horizontal .control-group:after {
-    content: " ";
-    display: table;
-  }
-  .form-horizontal .control-group:after {
-    clear: both;
-  }
-  .form-horizontal .control-group:before,
-  .form-horizontal .control-group:after {
-    content: " ";
-    display: table;
-  }
-  .form-horizontal .control-group:after {
-    clear: both;
-  }
-  .form-horizontal .control-group input,
-  .form-horizontal .control-group select,
-  .form-horizontal .control-group textarea {
-    margin-bottom: 0;
-  }
-  .form-horizontal .control-group > .control-label {
-    float: left;
-    width: 160px;
-    padding-top: 6px;
-    text-align: right;
-  }
-  .form-horizontal .control-group > .controls {
-    margin-left: 180px;
-  }
-  .form-horizontal .form-actions {
-    padding-left: 180px;
-  }
+.form-horizontal .row + .row {
+  margin-top: 15px;
+}
+.form-horizontal .row-label {
+  padding-top: 6px;
+  text-align: right;
 }
 .btn {
   display: inline-block;
@@ -1552,7 +1439,7 @@ select:focus:invalid:focus {
   margin-bottom: 0;
   font-size: 14px;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 1.428;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -1785,17 +1672,17 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-large {
   padding: 11px 14px;
-  font-size: 17.5px;
+  font-size: 18px;
   border-radius: 6px;
 }
 .btn-small {
   padding: 2px 10px;
-  font-size: 11.9px;
+  font-size: 12px;
   border-radius: 3px;
 }
 .btn-mini {
   padding: 0 6px;
-  font-size: 10.5px;
+  font-size: 11px;
   border-radius: 3px;
 }
 .btn-block {
@@ -2810,7 +2697,7 @@ ul.icons li .glyphicon-large:before {
   padding: 3px 20px;
   clear: both;
   font-weight: normal;
-  line-height: 20px;
+  line-height: 1.428;
   color: #333333;
   white-space: nowrap;
 }
@@ -3157,13 +3044,6 @@ button.close {
 .nav > .pull-right {
   float: right;
 }
-.nav .divider {
-  height: 2px;
-  margin: 9px 0;
-  overflow: hidden;
-  background-color: #e5e5e5;
-  border-bottom: 1px solid #fff;
-}
 .nav-tabs {
   border-bottom: 1px solid #ddd;
 }
@@ -3173,7 +3053,7 @@ button.close {
 }
 .nav-tabs > li > a {
   margin-right: 2px;
-  line-height: 20px;
+  line-height: 1.428;
   border: 1px solid transparent;
   border-radius: 4px 4px 0 0;
 }
@@ -3244,9 +3124,9 @@ button.close {
 .nav-header {
   display: block;
   padding: 3px 15px;
-  font-size: 10.5px;
+  font-size: 11px;
   font-weight: bold;
-  line-height: 20px;
+  line-height: 1.428;
   color: #999999;
   text-shadow: 0 1px 0 rgba(255,255,255,0.5);
   text-transform: uppercase;
@@ -3300,7 +3180,7 @@ button.close {
   clear: both;
 }
 .navbar-nav {
-  margin: 10px -15px 0;
+  margin-top: 10px;
 }
 .navbar-nav > li > a {
   padding-top: 15px;
@@ -3349,7 +3229,7 @@ button.close {
   margin-left: auto;
   margin-right: auto;
   padding: 15px;
-  font-size: 17.5px;
+  font-size: 18px;
   font-weight: 500;
   line-height: 20px;
   color: #777;
@@ -3387,6 +3267,18 @@ button.close {
 .navbar-form {
   margin-top: 8px;
   margin-bottom: 8px;
+}
+.navbar-form input,
+.navbar-form select,
+.navbar-form textarea,
+.navbar-form .radio,
+.navbar-form .checkbox {
+  display: inline-block;
+}
+.navbar-form .radio,
+.navbar-form .checkbox {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .navbar-nav > li > .dropdown-menu {
   margin-top: 0;
@@ -3516,6 +3408,10 @@ button.close {
 }
 .navbar-btn {
   margin-top: 8px;
+}
+.navbar-text {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 .navbar-link {
   color: #777;
@@ -3717,7 +3613,7 @@ button.close {
 .pagination > li > span {
   float: left;
   padding: 4px 12px;
-  line-height: 20px;
+  line-height: 1.428;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -3756,7 +3652,7 @@ button.close {
 .pagination-large > li > a,
 .pagination-large > li > span {
   padding: 11px 14px;
-  font-size: 17.5px;
+  font-size: 18px;
 }
 .pagination-large > li:first-child > a,
 .pagination-large > li:first-child > span {
@@ -3785,12 +3681,12 @@ button.close {
 .pagination-small > li > a,
 .pagination-small > li > span {
   padding: 2px 10px;
-  font-size: 11.9px;
+  font-size: 12px;
 }
 .pagination-mini > li > a,
 .pagination-mini > li > span {
   padding: 0 6px;
-  font-size: 10.5px;
+  font-size: 11px;
 }
 .pager {
   margin: 20px 0;
@@ -3912,14 +3808,14 @@ button.close {
 .modal-header {
   padding: 15px;
   border-bottom: 1px solid #e5e5e5;
-  min-height: 35px;
+  min-height: 16.428px;
 }
 .modal-header .close {
   margin-top: -2px;
 }
 .modal-title {
   margin: 0;
-  line-height: 20px;
+  line-height: 1.428;
 }
 .modal-body {
   position: relative;
@@ -3976,7 +3872,7 @@ button.close {
   z-index: 1030;
   display: block;
   visibility: visible;
-  font-size: 10.5px;
+  font-size: 11px;
   line-height: 1.4;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -4166,7 +4062,7 @@ button.close {
   bottom: -10px;
 }
 .alert {
-  padding: 8px 35px 8px 14px;
+  padding: 10px 35px 10px 15px;
   margin-bottom: 20px;
   color: #c09853;
   background-color: #fcf8e3;
@@ -4228,8 +4124,8 @@ button.close {
   color: #2d6987;
 }
 .alert-block {
-  padding-top: 14px;
-  padding-bottom: 14px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .alert-block > p,
 .alert-block > ul {
@@ -4241,7 +4137,7 @@ button.close {
 .thumbnail,
 .img-thumbnail {
   padding: 4px;
-  line-height: 20px;
+  line-height: 1.428;
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -4350,7 +4246,7 @@ a.thumbnail:focus {
   display: inline-block;
   min-width: 10px;
   padding: 3px 7px;
-  font-size: 11.9px;
+  font-size: 12px;
   font-weight: bold;
   color: #fff;
   line-height: 1;
@@ -4437,7 +4333,7 @@ a.list-group-item.active > .badge,
   float: left;
   width: 0%;
   height: 100%;
-  font-size: 11.9px;
+  font-size: 12px;
   color: #fff;
   text-align: center;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
@@ -4448,9 +4344,6 @@ a.list-group-item.active > .badge,
   -moz-transition: width .6s ease;
   -o-transition: width .6s ease;
   transition: width .6s ease;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
 }
 .progress-striped .progress-bar {
   background-color: #428bca;
@@ -4694,7 +4587,7 @@ a.list-group-item.active > .badge,
   margin-bottom: 30px;
   font-size: 21px;
   font-weight: 200;
-  line-height: 30px;
+  line-height: 2.142;
   color: inherit;
   background-color: #eeeeee;
 }
@@ -5092,7 +4985,7 @@ a.toggle-nav.black {
   margin-bottom: 0;
   font-size: 14px;
   font-weight: 500;
-  line-height: 20px;
+  line-height: 1.428;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
