--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -6,16 +6,16 @@
 .bypostauthor {}
 
 /* Fixed Topbar Navigation */
-body {
-  &.top-navbar {
-    padding-top: 60px;
-  }
-  &.admin-bar {
-    .navbar-fixed-top {
-      top: 28px;
-    }
-  }
-}
+// body {
+//   &.top-navbar {
+//     padding-top: 60px;
+//   }
+//   &.admin-bar {
+//     .navbar-fixed-top {
+//       top: 28px;
+//     }
+//   }
+// }
 
 .aligncenter {
   display: block;
@@ -30,58 +30,58 @@ body {
   float: right;
 }
 
-figure.alignnone {
-  margin-left: 0;
-  margin-right: 0;
-}
+// figure.alignnone {
+//   margin-left: 0;
+//   margin-right: 0;
+// }
 
-.logo-wrapper {
-  // margin-top: -20px;
-  .logo {
-    padding: 20px 0;
-    a.brand {
-      text-decoration: none;
-    }
-  }
-  .dropdown {
-    .dropdown-menu {
-      a {
-        color: #333;
-        &:hover {
-          color: #fff;
-        }
-      }
-    }
-  }
-  .nav-pills > li > a:hover {
-    background: rgba(255, 255, 255, 0.2);
-  }
-  .nav-tabs .open .dropdown-toggle,
-  .nav-pills .open .dropdown-toggle,
-  .nav > li.dropdown.open.active > a:hover {
-    background: rgba(255, 255, 255, 0.2);
-  }
-}
+// .logo-wrapper {
+//   // margin-top: -20px;
+//   .logo {
+//     padding: 20px 0;
+//     a.brand {
+//       text-decoration: none;
+//     }
+//   }
+//   .dropdown {
+//     .dropdown-menu {
+//       a {
+//         color: #333;
+//         &:hover {
+//           color: #fff;
+//         }
+//       }
+//     }
+//   }
+//   .nav-pills > li > a:hover {
+//     background: rgba(255, 255, 255, 0.2);
+//   }
+//   .nav-tabs .open .dropdown-toggle,
+//   .nav-pills .open .dropdown-toggle,
+//   .nav > li.dropdown.open.active > a:hover {
+//     background: rgba(255, 255, 255, 0.2);
+//   }
+// }
 
-.jumbotron {
-  padding: 50px 0;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, .4), 0 0 30px rgba(0, 0, 0, .075);
-  font-size: 40px;
-  line-height: 1.25;
-  h1 {
-    font-size: 100px;
-    line-height: 1;
-    letter-spacing: -2;
-  }
-  p {
-    margin-bottom: 10px;
-    a.btn {
-      padding: 14px 24px;
-      font-size: 24px;
-    }
-  }
-}
+// .jumbotron {
+//   padding: 50px 0;
+//   text-align: center;
+//   text-shadow: 0 1px 3px rgba(0, 0, 0, .4), 0 0 30px rgba(0, 0, 0, .075);
+//   font-size: 40px;
+//   line-height: 1.25;
+//   h1 {
+//     font-size: 100px;
+//     line-height: 1;
+//     letter-spacing: -2;
+//   }
+//   p {
+//     margin-bottom: 10px;
+//     a.btn {
+//       padding: 14px 24px;
+//       font-size: 24px;
+//     }
+//   }
+// }
 
 .admin-customize {
   position: fixed;
@@ -105,117 +105,117 @@ figure.alignnone {
   }
 }
 
-ul.social-networks {
-  min-width: 120px;
-}
+// ul.social-networks {
+//   min-width: 120px;
+// }
 
-li.social-networks {
-  font-size: 16px;
-  float: left;
-  list-style: none;
-  list-style-type: none;
-  a {
-    text-decoration: none;
-    opacity: 0.8;
-    &:hover {
-      opacity: 1;
-    }
-  }
-}
+// li.social-networks {
+//   font-size: 16px;
+//   float: left;
+//   list-style: none;
+//   list-style-type: none;
+//   a {
+//     text-decoration: none;
+//     opacity: 0.8;
+//     &:hover {
+//       opacity: 1;
+//     }
+//   }
+// }
 
-.navbar{
-  .nav {
-    > li.social-networks {
-      > a {
-        padding: 12px 0 0 0;
-      }
-    }
-    a.login-link{
-      padding: 10px 10px 0 10px;
-    }
-  }
-  .brand{
-    padding: 9px 20px 9px;
-  }
-}
+// .navbar{
+//   .nav {
+//     > li.social-networks {
+//       > a {
+//         padding: 12px 0 0 0;
+//       }
+//     }
+//     a.login-link{
+//       padding: 10px 10px 0 10px;
+//     }
+//   }
+//   .brand{
+//     padding: 9px 20px 9px;
+//   }
+// }
 
-#shoestrap_icon {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  a {
-    width: 100px;
-    height: 20px;
-    display: block;
-    background: url("../img/bottom-corner.png") no-repeat bottom left;
-    color: #fff;
-    font-size: 40px;
-    opacity: 0.3;
-    text-decoration: none;
-    padding: 80px 0 40px 5px;
-    -webkit-transition: all 350ms linear;
-    -moz-transition: all 350ms linear;
-    -ms-transition: all 350ms linear;
-    -o-transition: all 350ms linear;
-    transition: all 350ms linear;
-    &:hover {
-      opacity: 1;
-    }
-  }
-}
+// #shoestrap_icon {
+//   position: fixed;
+//   bottom: 0;
+//   left: 0;
+//   a {
+//     width: 100px;
+//     height: 20px;
+//     display: block;
+//     background: url("../img/bottom-corner.png") no-repeat bottom left;
+//     color: #fff;
+//     font-size: 40px;
+//     opacity: 0.3;
+//     text-decoration: none;
+//     padding: 80px 0 40px 5px;
+//     -webkit-transition: all 350ms linear;
+//     -moz-transition: all 350ms linear;
+//     -ms-transition: all 350ms linear;
+//     -o-transition: all 350ms linear;
+//     transition: all 350ms linear;
+//     &:hover {
+//       opacity: 1;
+//     }
+//   }
+// }
 
-#main-subnav .container,
-#main-subnav .navbar-inner {
-  min-height: 40px;
-}
+// #main-subnav .container,
+// #main-subnav .navbar-inner {
+//   min-height: 40px;
+// }
 
-.subnav-fixed {
-  .navbar;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1020;
-  // .border-radius(0px);
+// .subnav-fixed {
+//   .navbar;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   z-index: 1020;
+//   // .border-radius(0px);
 
-  // Prevent floats from breaking the navbar
-  .clearfix();
+//   // Prevent floats from breaking the navbar
+//   .clearfix();
 
-  .nav {
-    margin: 0 auto;
-    > li:first-child {
-      > a,
-      a:hover {
-        // .border-radius(0px);
-      }
-    }
-  }
-  .navbar-inner {
-    border: 0px !important;
-    // .border-radius(0px);
-    .box-shadow(0 0 0 rgba(0,0,0,0));
-  }
-}
+//   .nav {
+//     margin: 0 auto;
+//     > li:first-child {
+//       > a,
+//       a:hover {
+//         // .border-radius(0px);
+//       }
+//     }
+//   }
+//   .navbar-inner {
+//     border: 0px !important;
+//     // .border-radius(0px);
+//     .box-shadow(0 0 0 rgba(0,0,0,0));
+//   }
+// }
 
-body.admin-bar .subnav-fixed {
-  top: 28px;
-}
+// body.admin-bar .subnav-fixed {
+//   top: 28px;
+// }
 
-#main-subnav .container, #main-subnav .navbar-inner {min-height: 40px;}
+// #main-subnav .container, #main-subnav .navbar-inner {min-height: 40px;}
 
-.shareme {
-  .social_icon {
-    display: none;
-    text-decoration: none;
-    margin-left: 5px;
-    padding: 0 3px;
-  }
-  &:hover {
-    .social_icon {
-      display: inline-block;
-    }
-  }
-}
+// .shareme {
+//   .social_icon {
+//     display: none;
+//     text-decoration: none;
+//     margin-left: 5px;
+//     padding: 0 3px;
+//   }
+//   &:hover {
+//     .social_icon {
+//       display: inline-block;
+//     }
+//   }
+// }
 
 a.toggle-nav {
   background: url("../img/plus-toggle-white.png") no-repeat center center;
@@ -252,10 +252,10 @@ a.toggle-nav {
   padding: 20px 10px;
 }
 
-.navbar {
-  padding-left: 0;
-  padding-right: 0;
-}
+// .navbar {
+//   padding-left: 0;
+//   padding-right: 0;
+// }
 
 .button {
   .btn;
