--- a/assets/css/app-no-gradients-no-radius.css
+++ b/assets/css/app-no-gradients-no-radius.css
@@ -4459,23 +4459,6 @@ figure.alignnone {
   margin-left: 0;
   margin-right: 0;
 }
-.jumbotron {
-  padding: 1em 0;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.4), 0 0 30px rgba(0,0,0,0.075);
-  font-size: 2em;
-  line-height: 1.25;
-  border-radius: 0;
-}
-.jumbotron h1 {
-  line-height: 1;
-  letter-spacing: -2;
-  width: 100%;
-  display: block;
-}
-.jumbotron p {
-  margin-bottom: 1em;
-}
 .container.fluid {
   max-width: 98%;
 }
@@ -4483,10 +4466,21 @@ body.top-navbar.admin-bar {
   padding-top: 53px;
 }
 body.top-navbar.admin-bar .topnavbar.navbar-fixed-top {
-  margin-top: 32px;
+  padding-top: 85px;
 }
 body .navbar.navbar-static-top {
   margin-bottom: 0;
+}
+body.bottom-navbar {
+  padding-bottom: 64px;
+}
+@media screen and (min-width: 768px) {
+  body.top-navbar {
+    padding-top: 60px;
+  }
+  body.bottom-navbar {
+    padding-bottom: 60px;
+  }
 }
 .admin-customize {
   position: fixed;
@@ -4771,13 +4765,5 @@ fieldset[disabled] #social-sharing .shareme .box {
   }
   .admin-customize {
     display: none;
-  }
-}
-body.bottom-navbar {
-  padding-bottom: 64px;
-}
-@media screen and (min-width: 768px) {
-  body.bottom-navbar {
-    padding-bottom: 60px;
   }
 }
