--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -23,25 +23,6 @@ figure.alignnone {
   margin-right: 0;
 }
 
-.jumbotron {
-  padding: 1em 0;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, .4), 0 0 30px rgba(0, 0, 0, .075);
-  font-size: 2em;
-  line-height: 1.25;
-  border-radius: 0;
-  h1 {
-    // font-size: 3em;
-    line-height: 1;
-    letter-spacing: -2;
-    width: 100%;
-    display: block;
-  }
-  p {
-    margin-bottom: 1em;
-  }
-}
-
 .container.fluid {
   max-width: 98%;
 }
@@ -52,13 +33,27 @@ body {
       padding-top: 53px;
       .topnavbar {
         &.navbar-fixed-top {
-          margin-top: 32px;
+          padding-top: 85px;
         }
       }
     }
   }
   .navbar.navbar-static-top {
     margin-bottom: 0;
+  }
+  &.bottom-navbar {
+    padding-bottom: 64px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    &.top-navbar {
+      padding-top: 60px;
+    }
+    &.bottom-navbar {
+      padding-bottom: 60px;
+    }
   }
 }
 
@@ -249,15 +244,5 @@ a.toggle-nav {
   }
   .admin-customize {
     display: none;
-  }
-}
-
-// Adding padding to the bottom of <body> when navbar is at the bottom
-body.bottom-navbar {
-  padding-bottom: 64px;
-}
-@media screen and (min-width: 768px) {
-  body.bottom-navbar {
-    padding-bottom: 60px;
   }
 }
